# MACs

polyval/: Cargo.toml
polyval/benches/: polyval.rs
polyval/src/: lib.rs
polyval/src/field/: mod.rs
polyval/src/field/backend/: mod.rs  pclmulqdq.rs  soft.rs
polyval/tests/: lib.rs
