[package]
name = "polyval"
version = "0.0.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "GHASH-like universal hash over GF(2^128)"
documentation = "https://docs.rs/polyval"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["aes-gcm-siv", "crypto", "ghash", "gcm", "universal-hashing"]
categories = ["cryptography", "no-std"]

[dependencies]
byteorder = { version = "1", default-features = false }
zeroize = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
crypto-mac = { version = "0.7", features = ["dev"] }
hex-literal = "0.1"

[features]
nightly = []

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
